--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 <body>
     <div class="container">
-        <img src="/logosiccob.jpeg" alt="Logo da Empresa" class="logo">
+        <img src="logosiccob.jpeg" alt="Logo da Empresa" class="logo">
 
         <div class="botoes-container">
             <a href="https://wa.me/SEUNUMERO" class="botao-contato" target="_blank">
@@ -153,7 +153,7 @@
         </div>
 
         <div class="golpe">
-            <img src="/golpe.png" alt="cuidado com golpes">
+            <img src="golpe.png" alt="cuidado com golpes">
             <h4>O Banco SICOOB NUNCA SOLICITA PAGAMENTO ADIANTADO para liberação de crédito, aprovação de empréstimos ou
                 desbloqueio de valores. Desconfie de propostas que exijam:</h4>
             <ul>
