--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LinkTree Moderno</title>
+    <title>Aumento de Limite</title>
     <style>
         body {
             margin: 0;
@@ -131,6 +131,18 @@
                 font-size: 1em;
             }
         }
+
+        footer {
+            background: #003641;
+            border-radius: 10px;
+            color: white;
+            padding: 15px;
+            margin-top: 30px;
+        }  
+
+        li {
+            margin: 15px 0;
+        }
     </style>
 </head>
 
@@ -161,8 +173,11 @@
                 <li>Pagamento de "taxas administrativas", "seguros" ou "tarifas de liberação".</li>
                 <li> Compartilhamento de dados pessoais (senhas, token, código de segurança).</li>
             </ul>
-
         </div>
+        <footer>
+            <h6>BANCO COOPERATIVO SICOOB S.A - CNPJ: 02.038.232./0001-64</h6>
+            <h6>Endereço: SIG - SETOR DE INDÚSTRIAS GRÁFICAS, QUADRA 06 NÚMERO 2.080 - CEP 70.610-460 - BRASILIA/DF</h6>
+        </footer>
     </div>
 </body>
 
