--- a/index.html
+++ b/index.html
@@ -151,15 +151,15 @@
         <img src="logosiccob.jpeg" alt="Logo da Empresa" class="logo">
 
         <div class="botoes-container">
-            <a href="https://wa.me/SEUNUMERO" class="botao-contato" target="_blank">
+            <a href="https://wa.me/5511967617729?text=Desejo%20falar%20sobre%20Credito%20Agro." class="botao-contato" target="_blank">
                 Crédito Agro ( Pronamp/Pronaf )
             </a>
 
-            <a href="mailto:SEUEMAIL@EMPRESA.COM" class="botao-contato">
+            <a href="https://wa.me/5511967617729?text=Desejo%20falar%20sobre%20Cartao%20e%20Limite%20para%20PJ." class="botao-contato">
                 Cartao de Crédito PJ
             </a>
 
-            <a href="https://www.instagram.com/SEUINSTAGRAM" class="botao-contato" target="_blank">
+            <a href="https://wa.me/5511967617729?text=Desejo%20falar%20sobre%20Aumento%20de%20Limite%20Para%20Clientes%20Ativos." class="botao-contato" target="_blank">
                 Aumento e Liberação de Limite ( Clientes Ativos )
             </a>
         </div>
